--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.20.0",
+		"axios": "^1.7.7",
 		"bcryptjs": "^2.4.3",
 		"jsonwebtoken": "^9.0.2",
 		"socket.io": "^4.8.0",
