--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Change directory
-        run: cd ${{ vars.REPO_PATH }}
+        run: cd ${{ secrets.REPO_PATH }}
         
       - name: Down container
         run: docker compose down
