--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Down container
         run: docker compose down
     
-      - name: Down container
+      - name: Start container
         run: docker compose up -d
