feat: add shadcnui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  web:
-    container_name: sveltekit-websocket
+  web-dev:
+    container_name: sveltekit-websocket-dev
     image: node:lts
     restart: always
     tty: true
@@ -11,11 +11,36 @@ services:
       bash -c "
         npm install &&
         npx prisma migrate dev &&
+        npm run dev
+      "
+    volumes:
+      - ./:/usr/src/app
+    env_file:
+      - .env
+    profiles:
+      - dev
+    ports:
+      - '${WEB_PORT}:${WEB_PORT}'
+      - '${PUBLIC_SOCKET_PORT}:${PUBLIC_SOCKET_PORT}'
+  web-prod:
+    container_name: sveltekit-websocket-prod
+    image: node:lts
+    restart: always
+    tty: true
+    stdin_open: true
+    user: root
+    working_dir: /usr/src/app
+    command: |
+      bash -c "
+        npm install &&
+        npx prisma migrate prod &&
         npm run build && 
         npm run preview
       "
     volumes:
       - ./:/usr/src/app
+    profiles:
+      - prod
     env_file:
       - .env
     ports:
