--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,5 +15,5 @@ jobs:
           eval "$(ssh-agent -s)"
           ssh-add ${{ secrets.SSH_PRIVATE_KEY_PATH }}
           git pull origin main
-          docker compose down
-          docker compose up -d
+          docker compose --profile prod down
+          docker compose --profile prod up -d
