--- a/package.json
+++ b/package.json
@@ -1,37 +1,59 @@
 {
-	"name": "sveltekit-ws",
+	"name": "sveltekit-websocket",
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
 	"scripts": {
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"dev": "vite dev --host 0.0.0.0 --port $WEB_PORT",
 		"build": "vite build",
-		"preview": "vite preview --host 0.0.0.0 --port $WEB_PORT",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"preview": "vite preview --host 0.0.0.0 --port $WEB_PORT"
 	},
 	"prisma": {
 		"schema": "src/lib/database/schema.prisma"
 	},
 	"dependencies": {
+		"@fontsource/poppins": "^5.1.0",
 		"@prisma/client": "^5.20.0",
 		"axios": "^1.7.7",
 		"bcryptjs": "^2.4.3",
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-svelte": "^0.447.0",
+		"mode-watcher": "^0.4.1",
 		"socket.io": "^4.8.0",
-		"socket.io-client": "^4.8.0"
+		"socket.io-client": "^4.8.0",
+		"svelte-sonner": "^0.3.28",
+		"tailwind-merge": "^2.5.3",
+		"tailwind-variants": "^0.2.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.14",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/eslint": "^9.6.0",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/ws": "^8.5.12",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"prisma": "^5.20.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	}
 }
